# just-flying

./: .gitignore copy  Makefile  PKGBUILD  README.md  package-lock.json  package.json
.github/workflows/: bump_version.yml  publish_tauri.yml  tag_realease.yml
public/: index.html
src/: App.tsx  index.css  index.js  main.tsx  style.css
src-tauri/: Cargo.toml  just-flying.desktop  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: Controller.css  Controller.tsx  Image.css  Image.tsx  ImageLoader.tsx
src/helpers/: unsplash-api.ts  utils.ts
