[package]
name = "just-flying"
version = "1.0.0"
description = "Nice and comfy place to play some music and drink some coffee"
authors = ["nialera"]
license = ""
repository = "https://github.com/FinzoYFunzo/just-flying"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.4", features = [] }
tauri-plugin-log = "2"
